have to norminette

--- a/philosophers/philo/Makefile
+++ b/philosophers/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: tdeville <tdeville@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/07 13:44:35 by tdeville          #+#    #+#              #
-#    Updated: 2022/03/04 11:05:32 by tdeville         ###   ########lyon.fr    #
+#    Updated: 2022/03/04 15:35:34 by tdeville         ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,16 +18,16 @@ SRCS	=	src/main.c src/ft_atoi.c src/utils.c src/execution.c
 OBJS		= ${SRCS:.c=.o}
 
 CC		= gcc
-CFLAGS	= -Wall -Werror -Wextra -g -pthread
+CFLAGS	= -Wall -Werror -Wextra
 
 all: ${NAME}
 
 %.o : %.c	${HEADER}
-		${CC} ${CFLAGS} -c $< -o $@
+		${CC} -fsanitize=thread ${CFLAGS} -c $< -o $@
 
 
 ${NAME}: ${OBJS}
-		${CC} ${CFLAGS} ${OBJS} -o $@ 
+		${CC} -fsanitize=thread ${CFLAGS} ${OBJS} -o $@ 
 
 clean:
 		rm -f ${OBJS}
