--- a/philosophers/philo/Makefile
+++ b/philosophers/philo/Makefile
@@ -6,14 +6,14 @@
 #    By: tdeville <tdeville@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/07 13:44:35 by tdeville          #+#    #+#              #
-#    Updated: 2022/03/04 15:35:34 by tdeville         ###   ########lyon.fr    #
+#    Updated: 2022/03/07 14:51:43 by tdeville         ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	= philo
 HEADER	= includes/philo.h
 
-SRCS	=	src/main.c src/ft_atoi.c src/utils.c src/execution.c
+SRCS	=	src/main.c src/ft_atoi.c src/utils.c src/execution.c src/init.c
 
 OBJS		= ${SRCS:.c=.o}
 
@@ -23,11 +23,11 @@ CFLAGS	= -Wall -Werror -Wextra
 all: ${NAME}
 
 %.o : %.c	${HEADER}
-		${CC} -fsanitize=thread ${CFLAGS} -c $< -o $@
+		${CC} ${CFLAGS} -c $< -o $@
 
 
 ${NAME}: ${OBJS}
-		${CC} -fsanitize=thread ${CFLAGS} ${OBJS} -o $@ 
+		${CC} ${CFLAGS} ${OBJS} -o $@ 
 
 clean:
 		rm -f ${OBJS}
