--- a/philosophers/philo/Makefile
+++ b/philosophers/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: tdeville <tdeville@student.42lyon.fr>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/02/07 13:44:35 by tdeville          #+#    #+#              #
-#    Updated: 2022/03/08 13:49:28 by tdeville         ###   ########lyon.fr    #
+#    Updated: 2022/03/09 09:28:42 by tdeville         ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME	= philo
 HEADER	= includes/philo.h
 
 SRCS	=	src/main.c src/ft_atoi.c src/utils.c src/execution.c src/init.c \
-			src/utils2.c
+			src/utils2.c src/free_all.c
 
 OBJS		= ${SRCS:.c=.o}
 
